--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -4,6 +4,7 @@ Personnel security:
     filters: Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.
     hint: "What kind of personnel security do you apply to staff who have access to the service? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS, SCS
+    assuranceApproach:
     fields:
       - type: checkbox
         label: "Security clearance national vetting (SC)"
@@ -13,5 +14,4 @@ Personnel security:
         label: "Background checks in accordance with BS7858:2012"
       - type: checkbox
         label: "Employment checks"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
