--- a/service/security/asset-protection-and-resilience.yml
+++ b/service/security/asset-protection-and-resilience.yml
@@ -4,6 +4,7 @@ Asset protection and resilience:
     filters: The geographic location(s) where consumer data is stored, processed or managed from (to country level)
     hint: "Where are the service provider's datacentres located? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: checkbox
         label: "UK"
@@ -15,13 +16,13 @@ Asset protection and resilience:
         label: "Other countries with data protection treaties"
       - type: checkbox
         label: "Rest of world"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Data management location":
     requirements: The geographic location(s) where consumer data is stored, processed or managed from (to country level)
     filters: The geographic location(s) where consumer data is stored, processed or managed from (to country level)
     hint: "Where are the services managed from? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: checkbox
         label: "UK"
@@ -33,13 +34,13 @@ Asset protection and resilience:
         label: "Other countries with data protection treaties"
       - type: checkbox
         label: "Rest of world"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Legal jurisdiction of service provider":
     requirements: The legal jurisdiction(s) in which the service provider operates
     filters: The legal jurisdiction(s) in which the service provider operates
     hint: "Choose 1"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
+    assuranceApproach:
     fields:
       - type: radio
         label: "UK"
@@ -51,22 +52,22 @@ Asset protection and resilience:
         label: "Other countries with data protection treaties"
       - type: radio
         label: "Rest of world"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Datacentre protection":
     requirements: Consumers should be confident that the physical security measures employed by the provider are sufficient for their intended use of the service.
     filters: Consumers should be confident that the physical security measures employed by the provider are sufficient for their intended use of the service.
     hint: "Do you tell your consumers what physical security your datacentres have?"
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: boolean
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Data-at-rest protection":
     requirements: Consumers should have sufficient confidence that storage media containing their data is protected from unauthorised access.
     filters: Consumers should have sufficient confidence that storage media containing their data is protected from unauthorised access.
     hint: "How is storage media containing consumer data protected from unauthorised physical access? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: radio
         label: "CPA Foundation-grade assured components"
@@ -78,15 +79,15 @@ Asset protection and resilience:
         label: "Secure containers, racks or cages"
       - type: radio
         label: "Physical access control"
-        - type: radio
+      - type: radio
         label: "No protection"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Secure data deletion":
     requirements: Consumers should be sufficiently confident that their data is erased when resources are moved or re-provisioned, when they leave the service or when they request it to be erased.
     filters: Consumers should be sufficiently confident that their data is erased when resources are moved or re-provisioned, when they leave the service or when they request it to be erased.
     hint: "How do you erase consumer data when resources are moved or re-provisioned, or when the consumer leaves the service, or when they request it to be erased? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: radio
         label: "CPA Foundation-grade erasure product"
@@ -96,13 +97,13 @@ Asset protection and resilience:
         label: "Other secure erasure process"
       - type: radio
         label: "Other erasure process"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Storage media disposal":
     requirements: Consumers should be sufficiently confident that storage media which has held consumer data is sanitised or securely destroyed at the end of its life
     filters: Consumers should be sufficiently confident that storage media which has held consumer data is sanitised or securely destroyed at the end of its life
     hint: "How is storage media containing consumer data sanitised or securely destroyed at the end of its usable lifetime? Choose 1."
     dependsOnLots: PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: radio
         label: "CESG-assured destruction service (CAS(T))"
@@ -118,32 +119,31 @@ Asset protection and resilience:
         label: "Other secure erasure process"
       - type: radio
         label: "Other destruction/erasure process"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Secure equipment disposal":
     requirements: Consumers should be sufficiently confident that all equipment potentially containing consumer data, credentials, or configuration information for the service is identified at the end of its life (or prior to being recycled).
     filters: Consumers should be sufficiently confident that all equipment potentially containing consumer data, credentials, or configuration information for the service is identified at the end of its life (or prior to being recycled).
     hint: "Is all equipment potentially containing consumer data, credentials or configuration information identified at the end of its life or prior to being recycled? Choose 1."
     dependsOnLots: PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: boolean
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Redundant equipment accounts revoked":
     requirements: Consumers should be sufficiently confident that accounts or credentials specific to redundant equipment are revoked to reduce their value to an attacker.
     filters: Consumers should be sufficiently confident that accounts or credentials specific to redundant equipment are revoked to reduce their value to an attacker.
     hint: "Are accounts or credentials specific to redundant equipment revoked to reduce their value to an attacker?"
     dependsOnLots: PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: boolean
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Service availability (%)":
     requirements: Consumers should be sufficiently confident that the availability commitments of the service, including their ability to recover from outages, meets their business needs.
     filters: Consumers should be sufficiently confident that the availability commitments of the service, including their ability to recover from outages, meets their business needs.
     hint: "What is the availability of the service? eg 99.99%"
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: percentage
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
