--- a/service/security/identity-and-authentication.yml
+++ b/service/security/identity-and-authentication.yml
@@ -4,6 +4,7 @@ Identity and authentication:
     filters: Consumers should have sufficient confidence that identity and authentication controls ensure users are authorised to access specific interfaces.
     hint: "How do your identity and authentication controls ensure that users are authorised to access specific interfaces? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: checkbox
         label: "Username and two-factor authentication"
@@ -19,5 +20,4 @@ Identity and authentication:
         label: "Username and strong password/passphrase enforcement"
       - type: checkbox
         label: "Other mechanism"
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
