--- a/service/security/incident-management.yml
+++ b/service/security/incident-management.yml
@@ -4,26 +4,25 @@ Incident management:
     filters: Consumers should have confidence that incident management processes are in place for the service and are enacted in response to security incidents.
     hint: "Do you have incident management processes in place and are they enacted in response to security incidents?"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
+    assuranceApproach:
     fields:
       - type: boolean
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Consumer reporting of security incidents":
     requirements: Consumers should have confidence that pre-defined processes are in place for responding to common types of incident and attack.
     filters: Consumers should have confidence that pre-defined processes are in place for responding to common types of incident and attack.
     hint: "Do you have a defined process for reporting security incidents experienced by consumers and external entities?"
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     fields:
       - type: boolean
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
   "Security incident definition published":
     requirements: Consumers should have confidence that a defined process and contact route exists for reporting of security incidents by consumers and external entities.
     filters: Consumers should have confidence that a defined process and contact route exists for reporting of security incidents by consumers and external entities.
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach:
     hint: "Do you publish to consumers your definition of a security incident, along with the format, incident triggers and timescales for reporting such incidents?"
     fields:
       - type: boolean
-      - type: assurance
     validationNotAnswered: "This question requires an answer."
- 
