--- a/service/security/asset-protection-and-resilience.yml
+++ b/service/security/asset-protection-and-resilience.yml
@@ -4,7 +4,7 @@ Asset protection and resilience:
     filters: The geographic location(s) where consumer data is stored, processed or managed from (to country level)
     hint: "Where are the service provider's datacentres located? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type1
     fields:
       - type: checkbox
         label: "UK"
@@ -22,7 +22,7 @@ Asset protection and resilience:
     filters: The geographic location(s) where consumer data is stored, processed or managed from (to country level)
     hint: "Where are the services managed from? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type1
     fields:
       - type: checkbox
         label: "UK"
@@ -40,7 +40,7 @@ Asset protection and resilience:
     filters: The legal jurisdiction(s) in which the service provider operates
     hint: "Choose 1"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    assuranceApproach:
+    assuranceApproach: 3answers-type1
     fields:
       - type: radio
         label: "UK"
@@ -58,7 +58,7 @@ Asset protection and resilience:
     filters: Consumers should be confident that the physical security measures employed by the provider are sufficient for their intended use of the service.
     hint: "Do you tell your consumers what physical security your datacentres have?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -67,7 +67,7 @@ Asset protection and resilience:
     filters: Consumers should have sufficient confidence that storage media containing their data is protected from unauthorised access.
     hint: "How is storage media containing consumer data protected from unauthorised physical access? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 4answers-type1
     fields:
       - type: radio
         label: "CPA Foundation-grade assured components"
@@ -87,7 +87,7 @@ Asset protection and resilience:
     filters: Consumers should be sufficiently confident that their data is erased when resources are moved or re-provisioned, when they leave the service or when they request it to be erased.
     hint: "How do you erase consumer data when resources are moved or re-provisioned, or when the consumer leaves the service, or when they request it to be erased? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 4answers-type1
     fields:
       - type: radio
         label: "CPA Foundation-grade erasure product"
@@ -103,7 +103,7 @@ Asset protection and resilience:
     filters: Consumers should be sufficiently confident that storage media which has held consumer data is sanitised or securely destroyed at the end of its life
     hint: "How is storage media containing consumer data sanitised or securely destroyed at the end of its usable lifetime? Choose 1."
     dependsOnLots: PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 5answers-type1
     fields:
       - type: radio
         label: "CESG-assured destruction service (CAS(T))"
@@ -125,7 +125,7 @@ Asset protection and resilience:
     filters: Consumers should be sufficiently confident that all equipment potentially containing consumer data, credentials, or configuration information for the service is identified at the end of its life (or prior to being recycled).
     hint: "Is all equipment potentially containing consumer data, credentials or configuration information identified at the end of its life or prior to being recycled? Choose 1."
     dependsOnLots: PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 4answers-type2
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -134,7 +134,7 @@ Asset protection and resilience:
     filters: Consumers should be sufficiently confident that accounts or credentials specific to redundant equipment are revoked to reduce their value to an attacker.
     hint: "Are accounts or credentials specific to redundant equipment revoked to reduce their value to an attacker?"
     dependsOnLots: PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -143,7 +143,7 @@ Asset protection and resilience:
     filters: Consumers should be sufficiently confident that the availability commitments of the service, including their ability to recover from outages, meets their business needs.
     hint: "What is the availability of the service? eg 99.99%"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type1
     fields:
       - type: percentage
     validationNotAnswered: "This question requires an answer."
