--- a/service/security/secure-development.yml
+++ b/service/security/secure-development.yml
@@ -4,7 +4,7 @@ Secure development:
     filters: Consumers should be sufficiently confident that new and evolving threats are reviewed and the service improved in line with them.
     hint: "Are new and evolving threats reviewed and your services improved accordingly?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -13,7 +13,7 @@ Secure development:
     filters: Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.
     hint: "Is development carried out in line with industry good practice regarding secure design, coding, testing and deployment?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -22,7 +22,7 @@ Secure development:
     filters: Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.
     hint: "Do you have configuration management in place to ensure the integrity of the service through development, testing and deployment?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
