--- a/service/security/secure-service-administration.yml
+++ b/service/security/secure-service-administration.yml
@@ -4,7 +4,7 @@ Secure service administration:
     filters: Consumers have sufficient confidence that the technical approach the service provider uses to manage the service does not put their data or service at risk.
     hint: "Which technical approach do you use for your service management? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: radio
         label: "Dedicated devices on a segregated network"
