--- a/service/security/audit-information-provision-to-consumers.yml
+++ b/service/security/audit-information-provision-to-consumers.yml
@@ -4,6 +4,7 @@ Audit information provision to consumers:
     filters: Consumers are aware of the audit information that will be provided to them, how and when it will be made available to them, the format of the data, and the retention period associated with it.
     hint: "Do you provide audit information to consumers? Choose 1."
     dependsOnLots: SaaS, PaaS, IaaS
+    assuranceApproach: 2answers-type1
     fields:
       - type: radio
         label: "None"
