--- a/service/security/authentication-of-consumers-to-management-interfaces-and-within-support-channels.yml
+++ b/service/security/authentication-of-consumers-to-management-interfaces-and-within-support-channels.yml
@@ -4,7 +4,7 @@ Authentication of consumers:
     filters: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to authenticate to and access management interfaces for the service (Principle 10 should be used assess the risks of different approaches to meet this objective).
     hint: "Can only authorised individuals from the consumer organisation access management interfaces for the service?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type2
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -13,7 +13,7 @@ Authentication of consumers:
     filters: The consumer has sufficient confidence that only authorised individuals from the consumer organisation are able to perform actions affecting the consumer’s service through support channels.
     hint: "Can only authorised individuals from the consumer organisation perform actions affecting the consumer’s service through your support channels?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type2
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
