--- a/service/security/identity-and-authentication.yml
+++ b/service/security/identity-and-authentication.yml
@@ -4,7 +4,7 @@ Identity and authentication:
     filters: Consumers should have sufficient confidence that identity and authentication controls ensure users are authorised to access specific interfaces.
     hint: "How do your identity and authentication controls ensure that users are authorised to access specific interfaces? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type2
     fields:
       - type: checkbox
         label: "Username and two-factor authentication"
