--- a/service/security/incident-management.yml
+++ b/service/security/incident-management.yml
@@ -4,7 +4,7 @@ Incident management:
     filters: Consumers should have confidence that incident management processes are in place for the service and are enacted in response to security incidents.
     hint: "Do you have incident management processes in place and are they enacted in response to security incidents?"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -13,7 +13,7 @@ Incident management:
     filters: Consumers should have confidence that pre-defined processes are in place for responding to common types of incident and attack.
     hint: "Do you have a defined process for reporting security incidents experienced by consumers and external entities?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -21,7 +21,7 @@ Incident management:
     requirements: Consumers should have confidence that a defined process and contact route exists for reporting of security incidents by consumers and external entities.
     filters: Consumers should have confidence that a defined process and contact route exists for reporting of security incidents by consumers and external entities.
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     hint: "Do you publish to consumers your definition of a security incident, along with the format, incident triggers and timescales for reporting such incidents?"
     fields:
       - type: boolean
