--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -4,7 +4,7 @@ Personnel security:
     filters: Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.
     hint: "What kind of personnel security do you apply to staff who have access to the service? Choose all that apply."
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: checkbox
         label: "Security clearance national vetting (SC)"
