--- a/service/security/protective-monitoring.yml
+++ b/service/security/protective-monitoring.yml
@@ -4,7 +4,7 @@ Event monitoring:
     filters: Consumers should have confidence that events generated in service components required to support effective identification of suspicious activity are collected and fed into an analysis system.
     hint: "Do you conduct event monitoring and analysis to identify suspicious activity?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
