--- a/service/security/secure-use-of-the-service-by-the-customer.yml
+++ b/service/security/secure-use-of-the-service-by-the-customer.yml
@@ -4,7 +4,7 @@ Secure use of the service by the customer:
     filters: The consumer understands any service configuration options available to them and the security implications of choices they make.
     hint: "Which end device is the cloud service accessible from?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: radio
         label: "Corporate/enterprise devices"
@@ -18,7 +18,7 @@ Secure use of the service by the customer:
     filters: The consumer understands the security requirements on their processes, uses, and infrastructure related to the use of the service.
     hint: "Do you provide guidance on service configuration options and the relative impacts on security?"
     dependsOnLots: PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 3answers-type2
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -27,7 +27,7 @@ Secure use of the service by the customer:
     filters: The consumer can educate those administrating and using the service in how to use it safely and securely.
     hint: "Do you provide user or administrator training on the use of the service and its security?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
