--- a/service/security/supply-chain-security.yml
+++ b/service/security/supply-chain-security.yml
@@ -4,7 +4,7 @@ Supply-chain security:
     filters: The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.
     hint: "Do you inform consumers how much of their information is shared with, or accessible by, third-party suppliers and their supply chains?"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -13,7 +13,7 @@ Supply-chain security:
     filters: The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.
     hint: "Do you ensure that relevant security requirements, such as the Cloud Security Principles, are placed on third-party suppliers and delivery partners?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -22,7 +22,7 @@ Supply-chain security:
     filters: The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.
     hint: "Do you manage the risks to your service from third-party suppliers and delivery partners?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -31,7 +31,7 @@ Supply-chain security:
     filters: The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.
     hint: "Do you manage your third-party suppliers' compliance with relevant security requirements?"
     dependsOnLots: SaaS, PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
@@ -40,7 +40,7 @@ Supply-chain security:
     filters: The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.
     hint: "Do you verify that the hardware and software used in the service are genuine and have not been obviously tampered with?"
     dependsOnLots: PaaS, IaaS
-    assuranceApproach:
+    assuranceApproach: 2answers-type1
     fields:
       - type: boolean
     validationNotAnswered: "This question requires an answer."
