Remove security questions from SCS flow
- The security questions are no longer required if you are submitting an SCS
  service
- To avoid confusion, this commit removes any reference to SCS from the security
  questions, althought it does not have any functional implications

--- a/service/security/personnel-security.yml
+++ b/service/security/personnel-security.yml
@@ -3,7 +3,7 @@ Personnel security:
     requirements: Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.
     filters: Consumers should be content with the level of security screening conducted on service provider staff with access to their information or with ability to affect their service.
     hint: "What kind of personnel security do you apply to staff who have access to the service? Choose all that apply."
-    dependsOnLots: SaaS, PaaS, IaaS, SCS
+    dependsOnLots: SaaS, PaaS, IaaS
     assuranceApproach: 2answers-type1
     fields:
       - type: checkbox
