--- a/service/security/asset-protection-and-resilience.yml
+++ b/service/security/asset-protection-and-resilience.yml
@@ -39,7 +39,7 @@ Asset protection and resilience:
     requirements: The legal jurisdiction(s) in which the service provider operates
     filters: The legal jurisdiction(s) in which the service provider operates
     hint: "Choose 1"
-    dependsOnLots: SaaS, PaaS, IaaS, SCS
+    dependsOnLots: SaaS, PaaS, IaaS
     assuranceApproach: 3answers-type1
     fields:
       - type: radio
