--- a/service/security/incident-management.yml
+++ b/service/security/incident-management.yml
@@ -3,7 +3,7 @@ Incident management:
     requirements: Consumers should have confidence that incident management processes are in place for the service and are enacted in response to security incidents.
     filters: Consumers should have confidence that incident management processes are in place for the service and are enacted in response to security incidents.
     hint: "Do you have incident management processes in place and are they enacted in response to security incidents?"
-    dependsOnLots: SaaS, PaaS, IaaS, SCS
+    dependsOnLots: SaaS, PaaS, IaaS
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
