--- a/service/security/supply-chain-security.yml
+++ b/service/security/supply-chain-security.yml
@@ -3,7 +3,7 @@ Supply-chain security:
     requirements: The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.
     filters: The consumer understands and accepts how their information is shared with, or accessible by, third party suppliers and their supply chains.
     hint: "Do you inform consumers how much of their information is shared with, or accessible by, third-party suppliers and their supply chains?"
-    dependsOnLots: SaaS, PaaS, IaaS, SCS
+    dependsOnLots: SaaS, PaaS, IaaS
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
