--- a/service/service-definition.yml
+++ b/service/service-definition.yml
@@ -5,6 +5,7 @@ Service definition:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: upload
+    validationNotAnswered: "This question requires an answer."
     validationUploadFail: "Your document failed to upload. Please try again."
     validationWrongFormat: "Your document is not in an open document format. Please save in an odf, pdf or pda format."
     validationTooLarge: "Your document exceeds the 5MB limit. Please reduce file size."
