--- a/service/features-and-benefits.yml
+++ b/service/features-and-benefits.yml
@@ -7,7 +7,7 @@ Features and benefits:
     fields:
       - type: list
         addthing: Add another feature
-    validationNotAnswered: "This question requires an answer."
+    validationNotAnswered: "At least one answer is required."
   Service benefits:
     hint: "Include benefits that show how your service helps users improve their business. Use active phrases, eg publish content from multiple devices, quickly manage content on the move.  (Maximum 10 words per benefit. Maximum 10 benefits.)"
     mockAnswer: "Publish content, Quickly manage content on the move"
@@ -16,4 +16,4 @@ Features and benefits:
     fields:
       - type: list
         addthing: Add another business benefit
-    validationNotAnswered: "This question requires an answer."
+    validationNotAnswered: "At least one answer is required."
