--- a/service/access.yml
+++ b/service/access.yml
@@ -4,7 +4,17 @@ Access:
     hint: "Choose all that apply."
     fields:
       - type: checkbox
-        label: Internet Explorer
+        label: Internet Explorer 6
+      - type: checkbox
+        label: Internet Explorer 7
+      - type: checkbox
+        label: Internet Explorer 8
+      - type: checkbox
+        label: Internet Explorer 9
+      - type: checkbox
+        label: Internet Explorer 10
+      - type: checkbox
+        label: Internet Explorer 11+        
       - type: checkbox
         label: Firefox
       - type: checkbox
