Add 'none of the above' as option, datacentre tier
Forcing someone to answer this question but giving them a limited number of options is problematic.

References [card 7917](https://www.agileplannerapp.com/boards/187120/cards/7917)

--- a/service/data-storage.yml
+++ b/service/data-storage.yml
@@ -33,6 +33,8 @@ Data storage:
         label: Uptime Institute Tier 3
       - type: radio
         label: Uptime Institute Tier 4
+      - type: radio
+        label: None of the above
     validationNotAnswered: "This question requires an answer."
   Backup, disaster recovery and resilience plan in place:
     dependsOnLots: SaaS, PaaS, IaaS
