Make item name specific to certifications

--- a/service/certifications.yml
+++ b/service/certifications.yml
@@ -2,7 +2,7 @@ Certifications:
   Vendor certification(s):
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     hint: "Examples of certifications include VMware Certified Professional and Oracle Gold Partner. (Optional.)"
-    listItemName: "example"
+    listItemName: "certification example"
     fields:
       - type: list
         addthing: Add another certification
