Make item name specific to code libraries

--- a/service/code-libraries.yml
+++ b/service/code-libraries.yml
@@ -2,7 +2,7 @@ Code libraries:
   Languages your code libraries are written in:
     dependsOnLots: SaaS
     hint: "Examples of code libraries include AWS Ruby SDK and Stripe-Java. Examples of languages include PHP and Python. (Maximum 10 languages.) (Optional.) "
-    listItemName: "example"
+    listItemName: "code libraries example"
     fields:
       - type: list
         addthing: Add another code library
