Make item name specific to service type/benefit

--- a/service/features-and-benefits.yml
+++ b/service/features-and-benefits.yml
@@ -3,7 +3,7 @@ Features and benefits:
     hint: "Include the technical features of your product, eg graphical workflow, remote access. (Maximum 10 words per feature. Maximum 10 features.)"
     mockAnswer: "Graphical workflow, Remote access, Revision control"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    listItemName: "feature"
+    listItemName: "service feature"
     fields:
       - type: list
         addthing: Add another feature
@@ -12,7 +12,7 @@ Features and benefits:
     hint: "Include benefits that show how your service helps users improve their business. Use active phrases, eg publish content from multiple devices, quickly manage content on the move.  (Maximum 10 words per benefit. Maximum 10 benefits.)"
     mockAnswer: "Publish content, Quickly manage content on the move"
     dependsOnLots: SaaS, PaaS, IaaS, SCS
-    listItemName: "benefit"
+    listItemName: "service benefit"
     fields:
       - type: list
         addthing: Add another business benefit
