--- a/service/service-definition.yml
+++ b/service/service-definition.yml
@@ -1,11 +1,11 @@
 Service definition:
   Service definition document:
-    hint: "Please upload your service definition. Refer to the ITT documentation for further guidance on what to include. This document will not be indexed by search on the Digital Marketplace. Use an open document format, eg odf, pdf or pda. (Maximum file size 5MB.)"
+    hint: "Please upload your service definition. Refer to the ITT documentation for further guidance on what to include. This document will not be indexed by search on the Digital Marketplace. Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)"
     mockAnswer: Umbraco Service_Definition 102014.odf
     dependsOnLots: SaaS, PaaS, IaaS, SCS
     fields:
       - type: upload
     validationNotAnswered: "This question requires an answer."
     validationUploadFail: "Your document failed to upload. Please try again."
-    validationWrongFormat: "Your document is not in an open document format. Please save in an odf, pdf or pda format."
+    validationWrongFormat: "Your document is not in an open format. Please save as an Open Document Format (ODF) or PDF/A (eg .pdf, .odt)."
     validationTooLarge: "Your document exceeds the 5MB limit. Please reduce file size."
