--- a/service/service-details.yml
+++ b/service/service-details.yml
@@ -1,18 +1,23 @@
 Service details:
   Service type:
+    dependsOnLots: SaaS, PaaS, IaaS, SCS
     hint: Select one option relevant to your service. For more detail on each category, please take a look at the National Institute of Standards and Technology (NIST) definitions of cloud computing services.
     mockAnswer: Software as a service
     fields:
       - type: radio
         label: Infrastructure as a Service (IaaS)
+        value: iaas
         explanation: "Infrastructure is the hardware that makes software work. It’s the networks, hosting facilities and servers that platforms and software depend on. IaaS is infrastructure you can order and run entirely over the internet, without having to pay for your own hardware."
       - type: radio
         label: Software as a Service (SaaS)
+        value: saas
         explanation: "SaaS is an application or service that can be run over the internet or in the cloud. Examples of SaaS include web-based email services, customer relationship management (CRM) software and analytics tools."
       - type: radio
         label: Platform as a Service (PaaS)
+        value: paas
         explanation: "PaaS is a software platform that provides a basis for building other services and applications. With PaaS, you can set up, order, pay for and manage platforms in the cloud."
       - type: radio
         label: Specialist Cloud Services (SCS)
+        value: scs
         explanation: "Specialist Cloud Services support your transition to SaaS, PaaS and IaaS. Examples of SCS include cloud strategy, data transfer between providers, or day-to-day support of cloud-based services."
     validationNotAnswered: "This question requires an answer."
